FIX: サイドバーをfixedへ変更。それに伴うグラフ画面の調整

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -2,11 +2,13 @@
     width:200px;
     height:100%;
     border-radius: 0.5em;
-    background-color: rgba(156, 232, 233, 0.8);
+    background-color: rgba(255, 255, 255, 0.8);
     -moz-box-shadow:    inset 2px -2px 6px #000000;
     -webkit-box-shadow: inset 2px -2px 6px #000000;
     box-shadow:         inset 2px -2px 6px #000000;
-    background: linear-gradient(70deg, rgb(255, 210, 151), rgb(130, 224, 236));
+    background: linear-gradient(70deg, rgb(255, 210, 151, 0.5), rgb(130, 224, 236, 0.5));
+    position: fixed;
+
 }
 
 .sidebar div {
@@ -33,11 +35,14 @@
     margin: 0 5px 0 5px;
     display: flex;
 	flex-direction: column;
-    
+    left: 200px;
+    position: relative;
 }
 
 .f-container{
     height:100%;
+    width:200px;
+    position: absolute;
     display:flex;	
 }
 
